--- a/UpgradeFolders/UpgradeFolders.csproj
+++ b/UpgradeFolders/UpgradeFolders.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <PlatformTarget>x64</PlatformTarget>
+    <AnalysisLevel>latest-all</AnalysisLevel>
   </PropertyGroup>
 
 </Project>
